src/App.css
.App {
  text-align: center;
  font-family: Poppins, sans-serif;
}

.App-header {
  /* background-color: #282c34; */
  /* background-image: url("./assets/blob-scene-haikei.svg"); */
  background-size: cover;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: #111;
}

.profile {
  transform: scale(0.75);
}

